[gd_scene load_steps=5 format=3 uid="uid://dhrswkm2pyd0k"]

[ext_resource type="Texture2D" uid="uid://bnub53glj5dr7" path="res://icon.svg" id="1_dlmty"]
[ext_resource type="Script" uid="uid://rrejglro0ea1" path="res://scripts/boss.gd" id="1_neq0i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_neq0i"]
size = Vector2(5.01e+07, 1.195e+07)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jncid"]
radius = 113.0
height = 430.0

[node name="Boss" type="CharacterBody2D"]
script = ExtResource("1_neq0i")

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(43, -173)
scale = Vector2(-1.68533, 3.4367)
texture = ExtResource("1_dlmty")

[node name="Node2D" type="Node2D" parent="."]
visible = false
position = Vector2(46, -265)
scale = Vector2(1e-05, 1e-05)

[node name="Icon3" type="Sprite2D" parent="Node2D"]
position = Vector2(3.05e+07, -1.1e+06)
scale = Vector2(399254, -87936.7)
texture = ExtResource("1_dlmty")

[node name="Area2D" type="Area2D" parent="Node2D" groups=["boss"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node2D/Area2D"]
position = Vector2(3.125e+07, -1.075e+06)
shape = SubResource("RectangleShape2D_neq0i")

[node name="Icon2" type="Sprite2D" parent="."]
position = Vector2(43, -279)
texture = ExtResource("1_dlmty")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(38, -174)
shape = SubResource("CapsuleShape2D_jncid")

[node name="attack_delay" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="attack_duration" type="Timer" parent="."]
process_callback = 0
one_shot = true

[connection signal="body_entered" from="Node2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Node2D/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="attack_delay" to="." method="_on_attack_delay_timeout"]
[connection signal="timeout" from="attack_duration" to="." method="_on_attack_duration_timeout"]
